<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fillViewport="true"
    android:isScrollContainer="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ScrollViewSize">

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_date" />


    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@id/text_view_description"
        app:layout_constraintStart_toEndOf="@id/text_view_description"
        app:layout_constraintTop_toBottomOf="@id/text_view_date"
        android:contentDescription="@string/desc_icon" />

    <TextView
        android:id="@+id/text_view_max_temp"
        style="@style/text_view_detail"
        android:text="@string/temp_max"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_description" />

    <TextView
        android:id="@+id/text_view_min_temp"
        style="@style/text_view_detail"
        android:text="@string/temp_min"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_max_temp" />
    <ImageView
        android:id="@+id/mock"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/mock"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_min_temp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <View
        android:id="@+id/divider1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mock"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/divider" />

    <TextView
        android:id="@+id/times_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_all_day_temp"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1"/>

    <View
        android:id="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/times_day"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/divider" />

    <ImageView
        android:id="@+id/image_morning"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/morning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintEnd_toStartOf="@id/image_day"
        android:contentDescription="@string/icon_morning" />
    <TextView
        android:id="@+id/text_view_temp_morning_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/image_morning"
        app:layout_constraintTop_toBottomOf="@id/image_morning"
        app:layout_constraintEnd_toEndOf="@id/image_morning"/>

    <TextView
        android:id="@+id/text_view_temp_morning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_morning_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/image_morning"
        app:layout_constraintTop_toBottomOf="@id/text_view_temp_morning_value"
        app:layout_constraintEnd_toEndOf="@id/image_morning"/>

    <ImageView
        android:id="@+id/image_day"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/day"
        app:layout_constraintStart_toEndOf="@id/image_morning"
        app:layout_constraintEnd_toStartOf="@id/image_evening"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        android:contentDescription="@string/icon_day" />

    <TextView
        android:id="@+id/text_view_temp_day_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image_day"
        app:layout_constraintStart_toStartOf="@id/image_day"
        app:layout_constraintTop_toBottomOf="@id/image_day" />

    <TextView
        android:id="@+id/text_view_temp_day_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_day_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image_day"
        app:layout_constraintStart_toStartOf="@id/image_day"
        app:layout_constraintTop_toBottomOf="@id/text_view_temp_day_value" />

    <ImageView
        android:id="@+id/image_evening"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/evening"
        app:layout_constraintStart_toEndOf="@id/image_day"
        app:layout_constraintEnd_toStartOf="@id/image_night"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        android:contentDescription="@string/icon_evening" />
    <TextView
        android:id="@+id/text_view_temp_evening_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/image_evening"
        app:layout_constraintEnd_toEndOf="@id/image_evening"
        app:layout_constraintTop_toBottomOf="@id/image_evening" />

    <TextView
        android:id="@+id/text_view_temp_evening_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_evening_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/image_evening"
        app:layout_constraintEnd_toEndOf="@id/image_evening"
        app:layout_constraintTop_toBottomOf="@id/text_view_temp_evening_value" />
    <ImageView
        android:id="@+id/image_night"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/night"
        app:layout_constraintStart_toEndOf="@id/image_evening"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        android:contentDescription="@string/icon_night" />

    <TextView
        android:id="@+id/text_view_temp_night_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/image_night"
        app:layout_constraintEnd_toEndOf="@id/image_night"
        app:layout_constraintTop_toBottomOf="@id/image_night" />

    <TextView
        android:id="@+id/text_view_temp_night_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_night_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/image_night"
        app:layout_constraintEnd_toEndOf="@id/image_night"
        app:layout_constraintTop_toBottomOf="@id/text_view_temp_night_value" />


    <ImageView
        android:id="@+id/image_sunrise"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/sunrise"
        app:layout_constraintEnd_toStartOf="@id/image_sunset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_temp_day_text"
        android:contentDescription="@string/icon_sunrise" />

    <TextView
        android:id="@+id/text_view_sunrise_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise_value"
        app:layout_constraintTop_toBottomOf="@id/image_sunrise"
        app:layout_constraintStart_toStartOf="@id/image_sunrise"
        app:layout_constraintEnd_toEndOf="@id/image_sunrise" />
    <TextView
        android:id="@+id/text_view_sunrise_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise_text"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@id/text_view_sunrise_value"
        app:layout_constraintStart_toStartOf="@id/text_view_sunrise_value"
        app:layout_constraintEnd_toEndOf="@id/text_view_sunrise_value" />


    <ImageView
        android:id="@+id/image_sunset"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/sunset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_sunrise"
        app:layout_constraintTop_toBottomOf="@+id/text_view_temp_evening_text"
        android:contentDescription="@string/icon_sunset" />

    <TextView
        android:id="@+id/text_view_sunset_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunset_value"
        app:layout_constraintTop_toBottomOf="@id/image_sunset"
        app:layout_constraintStart_toStartOf="@id/image_sunset"
        app:layout_constraintEnd_toEndOf="@id/image_sunset" />
    <TextView
        android:id="@+id/text_view_sunset_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunset_text"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@id/text_view_sunset_value"
        app:layout_constraintStart_toStartOf="@id/text_view_sunset_value"
        app:layout_constraintEnd_toEndOf="@id/text_view_sunset_value" />

    <View
        android:id="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_sunset_text"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/divider" />

    <TextView
        android:id="@+id/text_view_advanced_forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:text="@string/advanced_forecast_text"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider4" />

    <View
        android:id="@+id/divider5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_advanced_forecast"
        style="@style/divider"/>

    <ImageView
        android:id="@+id/image_view_pressure"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintEnd_toStartOf="@id/image_view_wind_speed"
        android:contentDescription="@string/icon_pressure" />
    <TextView
        android:id="@+id/text_view_pressure_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_value"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/image_view_pressure"
        app:layout_constraintStart_toStartOf="@id/image_view_pressure"
        app:layout_constraintTop_toBottomOf="@id/image_view_pressure" />

    <TextView
        android:id="@+id/text_view_text_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_text"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/text_view_pressure_value"
        app:layout_constraintStart_toStartOf="@id/text_view_pressure_value"
        app:layout_constraintTop_toBottomOf="@id/text_view_pressure_value" />



    <ImageView
        android:id="@+id/image_view_wind_speed"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/wind_speed"
        app:layout_constraintStart_toEndOf="@id/image_view_pressure"
        app:layout_constraintEnd_toStartOf="@id/image_view_clouds"
        app:layout_constraintTop_toBottomOf="@id/divider5"
        android:contentDescription="@string/icon_wind" />
    <TextView
        android:id="@+id/text_view_wind_speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed_value"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@id/image_view_wind_speed"
        app:layout_constraintStart_toStartOf="@id/image_view_wind_speed"
        app:layout_constraintTop_toBottomOf="@id/image_view_wind_speed" />

    <TextView
        android:id="@+id/text_view_wind_speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed_text"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@id/text_view_wind_speed_value"
        app:layout_constraintStart_toStartOf="@id/text_view_wind_speed_value"
        app:layout_constraintTop_toBottomOf="@id/text_view_wind_speed_value" />


    <ImageView
        android:id="@+id/image_view_clouds"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/cloud"
        app:layout_constraintEnd_toStartOf="@id/image_view_dew_point"
        app:layout_constraintStart_toEndOf="@id/image_view_wind_speed"
        app:layout_constraintTop_toBottomOf="@id/divider5"
        android:contentDescription="@string/icon_clouds" />


    <TextView
        android:id="@+id/text_view_clouds_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clouds_value"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/image_view_clouds"
        app:layout_constraintStart_toStartOf="@+id/image_view_clouds"
        app:layout_constraintTop_toBottomOf="@+id/image_view_clouds" />

    <TextView
        android:id="@+id/text_view_clouds_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clouds_text"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/text_view_clouds_value"
        app:layout_constraintStart_toStartOf="@+id/text_view_clouds_value"
        app:layout_constraintTop_toBottomOf="@id/text_view_clouds_value" />

    <ImageView
        android:id="@+id/image_view_dew_point"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/dew_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_view_clouds"
        app:layout_constraintTop_toBottomOf="@id/divider5"
        android:contentDescription="@string/icon_dew_point" />
    <TextView
        android:id="@+id/text_view_dew_point_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@id/image_view_dew_point"
        app:layout_constraintStart_toStartOf="@id/image_view_dew_point"
        app:layout_constraintTop_toBottomOf="@id/image_view_dew_point" />

    <TextView
        android:id="@+id/text_view_dew_point_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dew_point_text"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@id/text_view_dew_point_value"
        app:layout_constraintStart_toStartOf="@id/text_view_dew_point_value"
        app:layout_constraintTop_toBottomOf="@id/text_view_dew_point_value" />

    <ImageButton
        android:id="@+id/button_send_weather"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_send_24"
        android:backgroundTint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/text_view_dew_point_text"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>